--- a/components/mk4f7y9il-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/mk4f7y9il-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mk4f7y9il-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:075aba84346feb5b7be7067b0c33d954869346a6@sha256:6a814a4bab9b49c8f2e369635f3eaf810cb8ec9b3109bf3701072785472984db
+          name: container-image
